Add support for filtering by categories for /resources
Add in factory girl to make testing a little easier

Disable warnings during rspec because our dependencies have a lot :(
